SERVER-17083: don't start background capped thread in repair

(cherry picked from commit ac9ee2fb80f2afc2737a0d9f346cff8117a82af2)